--- a/content/post/wds-2017.md
+++ b/content/post/wds-2017.md
@@ -1,7 +1,7 @@
 ---
 title: "Web Directions Summit 2017 Notes"
 date: 2017-11-12T21:49:55+11:00
-draft: true
+draft: false
 description: "A quick rundown of what I remember"
 ---
 
