WDS17: Link to Ben Buchanan's post

--- a/content/post/wds-2017.md
+++ b/content/post/wds-2017.md
@@ -16,3 +16,5 @@ Below is a rundown of what I've learned during those two days attending the conf
 * WebXR 2.0, combining AR and VR, is coming soon.
 
 I think those are the big things that are at the edges (i.e. new-ish) that I care about as they affect the areas I'm interested in, and the ones that are worth exploring for me anyway.
+
+For a more detailed overview of the event, read [Ben Buchanan's awesome post](http://weblog.200ok.com.au/2017/11/wds17-big-stonking-post.html).
