--- a/content/post/wds-2017.md
+++ b/content/post/wds-2017.md
@@ -2,7 +2,8 @@
 title: "Web Directions Summit 2017 Notes"
 date: 2017-11-12T21:49:55+11:00
 draft: false
-description: "A quick rundown of what I remember"
+categories: ["Conferences"]
+description: "A brief summary"
 ---
 
 Last week I attended the [Web Directions Summit](https://www.webdirections.org/wds/) in Sydney. There were surprisingly *a lot* more
