Move to Vuepress

--- a/content/wds-2017.md
+++ b/content/wds-2017.md
@@ -6,6 +6,8 @@ categories: ["Conferences"]
 description: "A brief summary"
 ---
 
+# Web Directions Summit 2017
+
 Last week I attended the [Web Directions Summit](https://www.webdirections.org/wds/) in Sydney. There were surprisingly *a lot* more
 good talks and brilliant speakers compared to previous years (thank God).
 
